# docs-for-claude

./: .gitignore  .markdownlint.yaml  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
aaa_temp/: INDEX_old_new.md  SLASH_old_new.md  plan_efficient-scrape.md  ref_firecrawl.md  writeup.md
anthropic/: INDEX.xml  README.md  agent-sdk-overview-claude-docs.md  agent-sdk-reference-python-claude-docs.md  agent-skills-in-the-sdk-claude-docs.md  building-agents-with-the-claude-agent-sdk-anthropic.md  custom-tools-claude-docs.md  enabling-claude-code-to-work-more-autonomously-anthropic.md  equipping-agents-for-the-real-world-with-agent-skills-anthropic.md  handling-permissions-claude-docs.md  hosting-the-agent-sdk-claude-docs.md  modifying-system-prompts-claude-docs.md  plugins-in-the-sdk-claude-docs.md  session-management-claude-docs.md  slash-commands-in-the-sdk-claude-docs.md  streaming-input-claude-docs.md  todo-lists-claude-docs.md  tracking-costs-and-usage-claude-docs.md
biome/: INDEX.xml  README.md  configure-biome-biome.md  configure-biome-biome.mdx  continuous-integration-biome.md  first-party-extensions-biome.md  getting-started-biome.md  getting-started-biome.mdx  git-hooks-biome.md  integrate-biome-with-your-vcs-biome.md  language-support-biome.md  linter-biome.md  philosophy-biome.md  reporters-biome.mdx  usesortedclasses-biome.md  vs-code-extension-biome.md
claude_code/: INDEX.xml  README.md  headless-mode-claude-code-docs.md  plugin-marketplaces-claude-code-docs.md  plugins-claude-code-docs.md  slash-commands-claude-code-docs.md
claude_plat/: README.md  agent-sdk-overview-claude-docs.md  agent-sdk-reference-python-claude-docs.md  equipping-agents-skills-anthropic-engineering.md  get-started-with-agent-skills-in-the-api-claude-docs.md  skill-authoring-best-practices-claude-docs.md  using-the-evaluation-tool-claude-docs.md
claudecode/: INDEX.xml  README.md  agent-skills-claude-code-docs.md  claude-code-github-actions-claude-code-docs.md  claude-code-gitlab-cicd-claude-code-docs.md  cli-reference-claude-code-docs.md  common-workflows-claude-code-docs.md  connect-claude-code-to-tools-via-mcp-claude-code-docs.md  discover-and-install-prebuilt-plugins-through-marketplaces-claude-code-docs.md  headless-mode-claude-code-docs.md  hooks-guide-claude-code.md  hooks-reference-claude-code-docs.md  optimize-your-terminal-setup-claude-code-docs.md  output-styles-claude-code-docs.md  plugin-marketplaces-claude-code-docs.md  plugins-claude-code-docs.md  plugins-reference-claude-code-docs.md  slash-commands-claude-code-docs.md  subagents-claude-code-docs.md  use-claude-code-with-chrome-beta-claude-code-docs.md
claudeplat/: INDEX.xml  README.md  agent-sdk-overview-claude-docs.md  agent-sdk-reference-python-claude-docs.md  agent-sdk-reference-typescript-claude-docs.md  agent-skills-claude-docs.md  be-clear-direct-and-detailed-claude-docs.md  building-agents-with-the-claude-agent-sdk-anthropic-engineering.md  chain-complex-prompts-for-stronger-performance-claude-docs.md  create-strong-empirical-evaluations-claude-docs.md  define-your-success-criteria-claude-docs.md  extended-thinking-tips-claude-docs.md  let-claude-think-chain-of-thought-prompting-to-increase-performance-claude-docs.md  long-context-prompting-tips-claude-docs.md  prompting-best-practices-claude-docs.md  reducing-latency-claude-docs.md  use-prompt-templates-and-variables-claude-docs.md  use-xml-tags-to-structure-your-prompts-claude-docs.md
clerk/: INDEX.xml  README.md  add-custom-items-and-links-to-the-userbutton-component.md  add-custom-pages-and-links-to-the-organizationprofile-component.md  add-custom-pages-and-links-to-the-userprofile-component.md  appearance-prop.md  authentication-flows-customize-your-redirect-urls.md  authentication-flows-sign-up-and-sign-in-options.md  build-your-own-sign-in-or-up-page-for-your-nextjs-app-with-clerk.md  build-your-own-sign-up-page-for-your-nextjs-app-with-clerk.md  captcha-prop.md  clerkprovider.md  component-reference.md  customizing-clerk-account-portal-overview.md  customizing-clerk-add-custom-items-and-links-to-the-userbutton-component.md  customizing-clerk-add-custom-pages-and-links-to-the-organizationprofile-component.md  customizing-clerk-add-custom-pages-and-links-to-the-userprofile-component.md  customizing-clerk-appearance-prop.md  customizing-clerk-captcha-prop.md  customizing-clerk-layout-prop.md  customizing-clerk-localization-prop-experimental.md  customizing-clerk-shadcnui.md  customizing-clerk-themes.md  customizing-clerk-variables-prop.md  development-clerk-environment-variables.md  development-install-clerk-with-shadcnui-cli.md  development-test-emails-and-phones.md  development-testing-with-playwright.md  development-testing.md  googleonetap-component.md  how-clerk-works.md  layout-prop.md  next-steps-core-concepts.md  nextjs-quickstart-app-router.md  protect.md  read-session-and-user-data-in-your-nextjs-app-with-clerk.md  sdk-reference-clerk-nextjs-sdk.md  sdk-reference-user-object.md  (+9 more)
convex/: INDEX.xml  (+13 more)
(+408 files in other folders)
